--- a/.github/workflows/main_laerksspringappdemo.yml
+++ b/.github/workflows/main_laerksspringappdemo.yml
@@ -26,9 +26,9 @@ jobs:
 
       - name: Build with Maven
         env:
-          DEV_DATABASE_URL: ${{secrets.DEV_DATABASE_URL}}
-          DEV_USERNAME: ${{secrets.DEV_USERNAME}}
-          DEV_PASSWORD: ${{secrets.DEV_PASSWORD}}
+          PROD_DATABASE_URL: ${{secrets.PROD_DATABASE_URL}}
+          PROD_USERNAME: ${{secrets.PROD_USERNAME}}
+          PROD_PASSWORD: ${{secrets.PROD_PASSWORD}}
         run: mvn clean install
 
       - name: Upload artifact for deployment job
